test/corpus/escapes.txt
==================
Escape
==================

@@code

---

(compilation_unit
  (razor_escape
    (element)))

==================
Standalone escape
==================

@@

---

(compilation_unit
  (razor_escape))
